用户显示页面

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c6ae459a4563f37cffbe",
+    "/css/app.css": "/css/app.css?id=d711c0aff874417b0a6d"
 }
